[package]
name = "li-stephens"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An implementation of the Li+Stephens model for predicting the likelihood of a test sequence given a reference set of haplotypes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
