[package]
name = "li-stephens"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An implementation of the Li+Stephens model for predicting the likelihood of a test sequence given a reference set of haplotypes"

repository = "https://github.com/HadiKhan-dev/li-stephens"
keywords = ["genetics","biology","DNA"]
categories = ["mathematics"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "Cargo.lock",
]


[dependencies]
ndarray = "0.15.4"
